--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 <h1>Welcome to our about page, thanks for visiting!</h1>
-<a href="{% url 'home'%}" >Go Back</a>
+<a href="{% url 'home'%}" >Go Home</a>
 
 <p>My name is Klinetek with Elected Games Studios and I am a super nerd.
   yup.. totally admitting that.  Anyway, thanks for visiting my page and
